--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test-upload-artifact:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Debug Runner Environment
@@ -12,15 +12,10 @@ jobs:
           echo "Runner OS: $RUNNER_OS"
           echo "Runner Temp Path: $RUNNER_TEMP"
           echo "Runner Tool Cache: $RUNNER_TOOL_CACHE"
-          echo "GitHub Actions Version:"
-          cat /usr/local/actions-runner/.env 2>/dev/null || echo "Runner version info not found"
 
-      - name: Verify Access to Marketplace
+      - name: Check Access to Action Repo
         run: |
-          curl -I https://github.com/actions/upload-artifact
-
-      - name: Clear Cache
-        run: rm -rf $RUNNER_TOOL_CACHE/actions
+          curl -I https://api.github.com/repos/actions/upload-artifact
 
       - name: Create Test Report Directory
         run: |
@@ -28,7 +23,7 @@ jobs:
           echo "Test report content" > allure-report/test.txt
 
       - name: Upload Test Report
-        uses: actions/upload-artifact@f43a0e5ff2bd294095638e18286ca9a3d1956744
+        uses: actions/upload-artifact@v3.1.2
         with:
           name: test-report
           path: allure-report
