--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,8 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Select Xcode 15
-        run: |
-          sudo xcode-select -s /Applications/Xcode_15.app
-          xcodebuild -version
+      - name: List installed Xcode versions
+        run: ls /Applications | grep Xcode
       - name: Install Dependencies
         run: |
           brew install allure
